---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_err(stringify! (unclosed_data_string), \"'Hello \\\\'you\\\\'!\\\\'\")"
---
error: Unclosed data string literal.
  ┌─ unclosed_data_string:1:1
  │
1 │ 'Hello \'you\'!\'
  │ ^^^^^^^^^^^^^^^^^ Unclosed data string literal.
